--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
+
+:root {
+  --accent-color: #0080ff;
+  --white-color: #fff;
+  --light-border-color: #ebebeb;
+  --modal-bg-color: rgba(0, 0, 0, 0.8);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -29,14 +37,31 @@ img {
   background-image: url("./images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-} 
+}
+
+.Modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: var(--modal-bg-color);
+}
+
+.Modal .container {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  background-color: var(--white-color);
+}
 
 .User {
   display: flex;
   align-items: center;
   justify-content: space-around;
   padding: 1rem;
-  border: 1px solid #ebebeb;
+  border: 1px solid var(--light-border-color);
 }
 
 .User .logo {
@@ -47,7 +72,7 @@ img {
 .User .info {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   gap: 0.3rem;
 }
 
@@ -63,4 +88,33 @@ img {
 
 .User .info a:hover {
   text-decoration: underline;
+}
+
+.AddNewTodo {
+  border-bottom: 1px solid var(--light-border-color);
+}
+
+.AddNewTodo .btn {
+  padding: 1rem;
+  width: 90%;
+  height: 75px;
+  margin: 0 auto;
+}
+
+.AddNewTodo .btn button {
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--accent-color);
+  border-radius: 3px;
+  font-size: 16px;
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  font-weight: bold;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.AddNewTodo .btn button:hover {
+  background-color: var(--white-color);
+  color: var(--accent-color);
 }
